cleaning things up and edits to main post

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from paramfittorchdemo.models import *"
+    "from paramfittorchdemo.training import *"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "\n",
     "In this package I provide a few example systems and parameter fitting routines for fitting the parameters. \n",
     "\n",
-    "The below code demonstrates how the van der Pol oscillator system defined as `torch.nn.module1 can be integrated against inside of pytorch. \n",
+    "The below code demonstrates how the van der Pol oscillator system defined as `torch.nn.module` can be integrated against inside of pytorch. \n",
     "\n"
    ]
   },
@@ -114,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
