--- a/nbs/00_training.ipynb
+++ b/nbs/00_training.ipynb
@@ -765,7 +765,7 @@
    "source": [
     "Next we will create a wrapper function for a pytorch training loop. Training means we want to update the model parameters to increase the alignment with the data ( or decrease the misalignment). \n",
     "\n",
-    "One of the tricks for this from deep learning is to not use all the data before taking a gradient step. Part of this is necessity for using enormous datasets as you can't fit all of that data inside a GPU's memory.\n",
+    "One of the tricks for this from deep learning is to not use all the data before taking a gradient step. Part of this is necessity for using enormous datasets as you can't fit all of that data inside a GPU's memory, but this also can help the gradient descent algorithm avoid getting stuck in local minima.\n",
     "\n",
     "The training loop in words: \n",
     "* Divide the dataset into mini-batches, these are subsets of your entire data set. Usually want to choose these randomly. \n",
@@ -1573,16 +1573,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/9q/b_vwv25d5txd4bkxcsdkx5q00000gp/T/ipykernel_85874/835880137.py:31: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
-      "  images.append(imageio.imread(file_path))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide \n",
     "\n",
