Fixing the images and the readme

--- a/nbs/00_training.ipynb
+++ b/nbs/00_training.ipynb
@@ -928,7 +928,7 @@
    ],
    "source": [
     "\n",
-    "train(vdp_model, data_vdp, epochs=50, save_plots_every=1, model_name=\"vdp\");\n",
+    "train(vdp_model, data_vdp, epochs=50, model_name=\"vdp\");\n",
     "print(f\"After training: {vdp_model}, where the true value is {true_mu}\")\n",
     "print(f\"Final Parameter Recovery Error: {vdp_model.mu - true_mu}\")\n"
    ]
@@ -1056,7 +1056,7 @@
    ],
    "source": [
     "\n",
-    "train(model_lv, data_lv, epochs=60, lr=1e-2, save_plots_every=1, model_name=\"lotkavolterra\")\n",
+    "train(model_lv, data_lv, epochs=60, lr=1e-2, model_name=\"lotkavolterra\")\n",
     "print(f\"Fitted model: {model_lv}\")\n",
     "print(f\"True model: {model_sim_lv}\")"
    ]
@@ -1123,7 +1123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|eval: false \n",
+    "#| eval: false \n",
     "\n",
     "model_sim_lorenz = Lorenz(sigma=10.0, rho=28.0, beta=8.0/3.0)\n",
     "ts_data = torch.arange(0, 10.0, 0.05)\n",
@@ -1162,7 +1162,7 @@
     }
    ],
    "source": [
-    "#|eval: false \n",
+    "#| eval: false \n",
     "\n",
     "lorenz_model = Lorenz(sigma=10.2, rho=28.2, beta=9.0/3) \n",
     "fig, ax = plot_time_series(model_sim_lorenz, lorenz_model, data_lorenz[0], title=\"Lorenz Model: Before Fitting\");\n",
@@ -1432,7 +1432,6 @@
     "      lr=1e-3, \n",
     "      batch_size=5,\n",
     "      show_every=100,\n",
-    "      save_plots_every=20,\n",
     "      model_name = \"nde\")"
    ]
   },
@@ -1519,67 +1518,6 @@
     "* Anything else I hear back about from you! \n",
     "\n",
     "Happy modeling! "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide \n",
-    "import paramfittorchdemo\n",
-    "import imageio\n",
-    "import os\n",
-    "BASEPATH = Path(paramfittorchdemo.__path__[0])\n",
-    "\n",
-    "# Python function to take elements images in a folder and make a gif\n",
-    "\n",
-    "def make_gif(image_folder: Path, \n",
-    "             model_name: str, \n",
-    "             cleanup: bool = True,\n",
-    "             duration: float = 0.10):\n",
-    "    \"\"\" \n",
-    "        Sort by the first digit of the filename and make a gif from the images\n",
-    "        image_folder: the folder where the images are\n",
-    "        model_name: filter the images to contain this substring \n",
-    "        gif_name: the name of the gif\n",
-    "    \"\"\"\n",
-    "    images = []\n",
-    "    # sort the image folder by the first digit of the filename\n",
-    "    all_files = os.listdir(image_folder) \n",
-    "    filenames = [x for x in all_files if model_name in x]\n",
-    "    filenames = sorted(filenames, key=lambda x: int(x.split('_')[0]))\n",
-    "    \n",
-    "    if len(filenames) == 0:\n",
-    "        raise ValueError(\"The folder is empty\") \n",
-    "    \n",
-    "    for filename in filenames:\n",
-    "        if filename.endswith(\".png\"):\n",
-    "            file_path = os.path.join(image_folder, filename)\n",
-    "            \n",
-    "            images.append(imageio.imread(file_path))\n",
-    "    outfile = model_name + \".gif\"\n",
-    "    imageio.mimsave(BASEPATH / 'images/' / outfile, images, duration = duration)\n",
-    "    \n",
-    "    # remove the image files from the directory \n",
-    "    if cleanup:\n",
-    "        for filename in filenames:\n",
-    "            file_path = os.path.join(image_folder, filename)\n",
-    "            os.remove(file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide \n",
-    "\n",
-    "# make_gif(\"./tmp_plots/\", \"lotkavolterra\", cleanup=False) \n",
-    "# make_gif(\"./tmp_plots/\", \"vdp\", cleanup=False) \n",
-    "# make_gif(\"./tmp_plots/\", \"nde\", cleanup=False)\n"
    ]
   },
   {
